Fixed z-index of header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,10 @@
     box-sizing: border-box;
 }
 
+header {
+    z-index: 100;
+}
+
 body {
     font-family: var(--ff-primary);
     background-color: var(--bg-color);
